[package]
name = "vkfft-sys"
version = "0.1.1"
authors = ["Semio AI, Inc."]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for VkFFT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58"
cc = "1.0"